Fixed overlap css issue with friends

--- a/static/global.css
+++ b/static/global.css
@@ -26,21 +26,31 @@ ul {
 .pals li {
     list-style-type: none;
     margin: 0 auto;
-    height:75px;
-    border-radius: 100%;
+    height: 100%;
+    width: 100%;
+}
+
+li img {
+    height: 75px;
     width: 75px;
+    border-radius: 100%;
 }
+
 h5 {
-    padding-top: 40px;
+    margin: 0;
 }
+
 h3 { 
     text-align: center;
     display: block;
 }
 
 .online {
-    height:15px;
+    height: 15px;
     width: 15px;
+    position: relative;
+    left: 25px;
+    top: 15px;
     background-color: green;
     border-radius: 100%;
 }
